[workspace]
resolver = "2"

members = [
    "core",
    "util",
    "services",
    "lite-rpc",
    "quic-forward-proxy",
    "quic-forward-proxy-integration-test",
#    "cluster-endpoints",
    "blockstore",
    "prioritization_fees",
    "bench",
    "benchrunner-service",
    "address-lookup-tables",
    "accounts",
    "accounts-on-demand",
    #examples
    "examples/custom-tpu-send-transactions"
]

[workspace.package]
version = "0.4.0"
authors = ["gmgalactus <gmgalactus@mango.markets>", "GroovieGermanikus <groovie@mango.markets>"]
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"
edition = "2021"

[workspace.dependencies]

solana-lite-rpc-services = { path = "services", version="0.4.0" }
solana-lite-rpc-core = { path = "core", version="0.4.0" }
solana-lite-rpc-util = { path = "util", version="0.4.0" }
solana-lite-rpc-cluster-endpoints = { path = "cluster-endpoints", version="0.4.0" }
solana-lite-rpc-blockstore = { path = "blockstore", version="0.4.0" }
solana-lite-rpc-stakevote = { path = "stake_vote", version="0.4.0" }
solana-lite-rpc-prioritization-fees = { path = "prioritization_fees", version="0.4.0" }
solana-lite-rpc-address-lookup-tables = { path = "address-lookup-tables", version="0.4.0" }
solana-lite-rpc-accounts = { path = "accounts", version = "0.4.0"}
solana-lite-rpc-accounts-on-demand = { path = "accounts-on-demand", version = "0.4.0"}
bench = { path = "bench", version="0.4.0" }

solana-sdk = "~2.2.2"
solana-tls-utils = "~2.2.2"
solana-rpc-client = "~2.2.2"
solana-rpc-client-api = "~2.2.2"
solana-transaction-status = "~2.2.2"
solana-version = "~2.2.2"
solana-client = "~2.2.2"
solana-net-utils = "~2.2.2"
solana-pubsub-client = "~2.2.2"
solana-streamer = "~2.2.2"
solana-account-decoder = "~2.2.2"
solana-ledger = "~2.2.2"
solana-program = "~2.2.2"
solana-accounts-db = "~2.2.2"
solana-address-lookup-table-program = "~2.2.2"

yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v6.0.0+solana.2.2.12" }
geyser-grpc-connector = { git = "https://github.com/blockworks-foundation/geyser-grpc-connector.git", tag = "v0.13.1+yellowstone.6.0.0+solana.2.2" }

itertools = "0.10.5"
rangetools = "0.1.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
bincode = "1.3.3"
bs58 = "0.4.0"
base64 = "0.21.0"
borsh = "0.10.3"
thiserror = "1.0.40"
async-trait = "0.1.68"
futures = "0.3.28"
futures-util = "0.3.28"
bytes = "1.4.0"
anyhow = "1.0.70"
log = "0.4.17"
clap = { version = "4.2.4", features = ["derive", "env"] }
dashmap = "5.4.0"
const_env = "0.1.2"
jsonrpsee = { version = "0.24.9", features = ["macros", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.24"
native-tls = "0.2.14"
postgres-native-tls = "0.5.1"
prometheus = "0.13.3"
lazy_static = "1.4.0"
dotenv = "0.15.0"
async-channel = "1.8.0"
merge-streams = "0.1.2"
jemallocator = "0.5.4"
quinn = "0.11.8"
quinn-proto = "0.11.12"
rustls = { version = "0.23.22", features = ["ring"], default-features = false }
tonic = "0.13.1"
tonic-health = "0.13.1"
rcgen = "0.13.2"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
