[package]
name = "solana-lite-rpc-quic-forward-proxy"
version = "0.1.0"
edition = "2021"
description = "A staked proxy for transaction forwarding to TPU nodes"
rust-version = "1.84.1"
#default-run = "lite-rpc"
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"
publish = false

[dependencies]
solana-sdk = "~2.2.2"
solana-streamer = "~2.2.7"
solana-tls-utils = "~2.2.2"
solana-net-utils = "~2.2.2"
serde = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
rustls = { version = "0.23.22", features = ["std"], default-features = false }
quinn = "0.11.8"
quinn-proto = "0.11.12"
futures = { workspace = true }
tokio = { version = "1.45.0", features = ["full"]}
rcgen = { workspace = true}

